[App] Fix mobile image spacings

--- a/app/src/styles/ArtworkList.scss
+++ b/app/src/styles/ArtworkList.scss
@@ -12,10 +12,12 @@
 .artwork-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   margin-top: 1rem;
   overflow: hidden;
 
   @media screen and (min-width: $bp-tablet) {
+    justify-content: flex-start;
     margin-top: 2rem;
     padding-right: 100px;
   }
